objects/APTS_Factory_Master_Picklist__c.object
<CustomObject>
    <fields>
        <fullName>APTS_BAL_ID__c</fullName>
        <formula>APTS_Factory__r.APTS_BAL_ID__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>BAL ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_Code_Used_For__c</fullName>
        <label>Code Used For</label>
        <picklist>
            <picklistValues>
                <fullName>Approval Comment</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>APTS_Factory__c</fullName>
        <label>Factory</label>
        <referenceTo>APTS_Factory__c</referenceTo>
        <relationshipLabel>Factory Master Picklists</relationshipLabel>
        <relationshipName>Factory_Master_Picklists</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>APTS_Value_1__c</fullName>
        <label>Value 1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_Value_2__c</fullName>
        <label>Value 2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_Value_3__c</fullName>
        <label>Value 3</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Factory Master Picklist</label>
    <nameField>
        <displayFormat>FMP-{00000}</displayFormat>
        <label>Factory Master Picklist Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Factory Master Picklists</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>